[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.30"#"0.1.40"
rusqlite = "0.27.0" # sqlite3
roux = "1.3.10" #reddit api
twitter = "0.1.0" #twitter api
google-youtube3-cli = "3.0.0+20220303" #youtube api
